[metadata]
name = django-ok-likes
version = 0.4.1
description = This app provides like/unlike functionality through Django REST Framework APIView classes.
long_description = file: README.rst
author = Oleg Kleschunov
author_email = igorkleschunov@gmail.com
url = https://github.com/LowerDeez/ok-likes
home-page = https://github.com/LowerDeez/ok-likes
keywords = python, likes, likes-models, django, voting
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django :: 1.11,
    Framework :: Django :: 2.0,
    Framework :: Django :: 2.1,
    Framework :: Django :: 2.2,

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=1.11
    six
    mock

[isort]
known_first_party = likes
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 0
skip = migrations

[coverage:run]
source = likes
branch = True
omit =
    likes/migrations/*
    likes/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/likes